--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "Willian Lauber <willianlauber@gmail.com>"
   ],
   "dependencies": {
+    "cssnano": "^3.10.0",
     "loader-utils": "~0.2.5",
     "postcss": "^5.2.17",
+    "postcss-loader": "^1.3.3",
     "pug-walk": "^1.0.0",
-    "resolve": "^1.1.7"
+    "resolve": "^1.1.7",
+    "uglifyjs": "^2.4.10"
   },
   "peerDependencies": {
     "pug": ">=2.0.0-beta <3"
   },
   "devDependencies": {
-     "babel": "^6.0.0",
+    "babel": "^6.0.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-polyfill": "^6.16.0",
@@ -24,10 +27,10 @@
     "babel-preset-es2016": "^6.16.0",
     "babel-preset-react": "^6.0.0",
     "pug": "^2.0.0-beta",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.14.1",
+    "should": "*",
     "typescript": "^2.2.1",
-    "should": "*"
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
     "build": "tsc --version && tsc --project \"./src\"",
