--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "Willian Lauber <willianlauber@gmail.com>"
   ],
   "dependencies": {
-    "cssnano": "^3.10.0",
     "loader-utils": "~0.2.5",
     "postcss": "^5.2.17",
     "postcss-loader": "^1.3.3",
+    "pug-html-loader": "^1.1.4",
     "pug-walk": "^1.0.0",
-    "resolve": "^1.1.7",
-    "uglifyjs": "^2.4.10"
+    "resolve": "^1.1.7"
   },
   "peerDependencies": {
     "pug": ">=2.0.0-beta <3"
